Closed Bug 73099 Opened 24 years ago Closed 24 years ago

new cache problems with bugzilla

Categories

(Core :: Networking: HTTP, defect)

x86
Linux
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla0.9

People

(Reporter: sspitzer, Assigned: gordon)

References

Details

(Whiteboard: [cache])

view a bugzilla report, add a comment, submit, close the window. open the report again, you get the version you loaded before, prior to your comment. add a new comment, collision with your last comment. zoinks!
-->gordon
Assignee: neeti → gordon
sounds more like an HTTP bug to me... investigating.
Assignee: gordon → darin
Component: Networking: Cache → Networking: HTTP
there is a problem with the cache validation setting of "once per session" we compare the session start time against the last modified time of the cache entry, and it looks like the cache entry is always modified! not sure if this is http's fault or the cache's. investigating...
Status: NEW → ASSIGNED
QA Contact: gordon → tever
Target Milestone: --- → mozilla0.9
Keywords: nsbeta1
*** Bug 73417 has been marked as a duplicate of this bug. ***
Blocks: 73293
No longer blocks: 73293
ok.. this is not an HTTP bug. the disk cache calls SetDataSize() and SetData() on disk cache entries while reading the data from disk (readDiskCacheEntry). this results in the lastModified time stamp being updated. this is not correct, since lastModified should only be updated to reflect the last time the cache client (in this case HTTP) modified the cached data. gordon: cache entry descriptor needs to tell the cache entry when to update its last modified time stamp. it doesn't make sense for the cache entry to try to do this automagically.
Assignee: darin → gordon
Status: ASSIGNED → NEW
this is dogfood for someone who spends his day in Bugzilla.
Keywords: nsdogfood
Darin, this has already been fixed on the DISKCACHE1_BRANCH, which we hope to land in the next day or so.
Whiteboard: [cache]
my fix for bug 73490 should make this bug appear to be fixed.
Whiteboard: [cache]
Whiteboard: [cache]
gordon: make sure this problem is fixed WITHOUT darin's fix of bug 73490 since his fix will mask this to be less frequently visible and make you believe that this is fixed.
this bug can be verified using about:cache. upon revisiting a cached page, the last-modified time stamp should not change, unless the page was refetched or validated with the server. changing your cache preferences to validate never should help make verification easier.
Fix checked in.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
*** Bug 73921 has been marked as a duplicate of this bug. ***
*** Bug 73924 has been marked as a duplicate of this bug. ***
Verified Linux 2001062021
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.