Fix bug 73099. Problems with updating lastModified time stamp. r=beard, sr=darin.